--- a/Contents/Material/Part B - Statistical inference/Practical_B.Rmd
+++ b/Contents/Material/Part B - Statistical inference/Practical_B.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Practical H"
-author: "Gerko Vink"
+title: "Practical B"
+author: "Jolien Cremers (adapted from Gerko Vink)"
 date: "Statistical Programming with R"
 output: html_document
 ---
@@ -63,42 +63,22 @@ rownames(data) <- c("Chinese", "Other", "Don't know")
 data
 ```
 
+---
+
+6. **Write a function that chooses automatically whether to do the `chisq.test()` or the `fisher.test()`. Create the function such that it:**
+
+- takes two vectors as input
+- creates a table from the two vectors
+- checks if there is any expected cell frequency that is smaller than 5
+- and that then performs and prints the results of the appropriate test.
 
 ---
 
-In the following simulation experiment we investigate least-squares estimation of the mean.
-
+7. **Test the function with the dataset `bacteria` (from `MASS`) by testing independence between compliance (`hilo`) and the presence or absence of disease (`y`).**
+  
 ---
 
-6. **Start by drawing a 100 values from a normal distribution with $\mu = 3$ and $\sigma = 7$. Use seed value `32083`.**
-
----
-
-7. **Next, confirm that the sample mean of the values in x is near 4.166.**
-
----
-
-8. **Calculate the sample mean's sum of squared deviations from $\mu$. The sum of squared deviations from mu is defined as: **
-$$ \sum_{i=1}^{100} (x_i - \mu)^2,$$
-
----
-
-9. **Now create a function that automates the calculation of the sum of squares for any given $\mu$. Call the function `lsfun` because we are going to identify the least squares estimate in exercise 8.**
-
----
-
-10. **Plot the curve of your least square function such that you can identify the minimum of the curve (i.e. the location for $x$ where the sum of the squared deviations are the lowest).**
-
----
-
-11. **Repeat the experiment from 10 with the following $X \sim \mathcal{N}(\mu, \sigma^2)$ normal samples of length $n=100$, but now use the sample mean $\bar{x}$ in your function `lsfun()`. Let the function plot the curve and print the location where the minimum of the sum of the squares is located each time. Fix the seed to `set.seed(123)`:**
-
-- $x \sim \mathcal{N}(3, 7)$
-- $x \sim \mathcal{N}(15, 12)$
-- $x \sim \mathcal{N}(0, 2)$
-- $\sqrt{x} \sim \mathcal{N}(0, 2)$, i.e. you need to square $x$
-
-Hint: use the sample mean $\bar{x}$ as the center of your graph and add/subtract e.g. `.5` from this value to plot a range.
+8. **Does your function work differently if we only put in the first 25 rows of the `bacteria` dataset?**
 
 ---
 
