--- a/Contents/Material/Part B - Statistical inference/Lecture_B.Rmd
+++ b/Contents/Material/Part B - Statistical inference/Lecture_B.Rmd
@@ -23,7 +23,6 @@ output:
 ```{r message=FALSE}
 library(magrittr) #for pipes
 library(MASS)     #for the bacteria data
-#library(ggplot2)
 library(Ecdat)    #for the Benefits data
 ```
 
@@ -283,13 +282,38 @@ fit <- Benefits %$% aov(stateur~sex)
 plot(fit, 2)
 ```
 
+
+
+
+
 # Non-parametric testing
 
-## Mann-Whitney U test
+## Mann-Whitney / Wilcoxon rank-sum test {.smaller}
 
-## Kruskal-wallis test (violation of normality assuption)
+Check whether two population distributions (independent samples) are identical without assuming normality.
 
-## Friedman test
+```{r}
+Benefits %$% wilcox.test(stateur~sex, paired = FALSE) 
+```
+
+set `paired = TRUE` for Wilcoxon signed-rank test for dependent samples.
+
+## Kruskal-wallis test
+
+Check whether a collection of population distributions (independent samples) are identical without assuming normality.
+
+```{r}
+Benefits %$% kruskal.test(stateur~sex)
+```
+
+
+## Some other non-parametric tests in `R`
+
+- `friedman.test`: Friedman rank sum test
+- `Rfit` package for nonparametric regression
+- `cor(x, y, method = "kendall")` for Kendalls tau-b correlation
+- `cor(x, y, method = "spearman")` for Spearman correlation
+- `survival` package for semi- and nonparametric methods (Kaplan-Meier/Cox regression) in survival analysis
 
 
 
