Update practical C and add 'extra' practical M

--- a/Contents/Material/Part C - Linear models/Practical_C.Rmd
+++ b/Contents/Material/Part C - Linear models/Practical_C.Rmd
@@ -94,4 +94,4 @@ The mammalsleep dataset is part of `mice`. It contains the Allison and Cicchetti
 
 ---
 
-End of `Practical H`. 
+End of `Practical`. 
